--- a/github/workflows/pages-deploy.yml
+++ b/github/workflows/pages-deploy.yml
@@ -1,3 +1,4 @@
+# .github/workflows/pages-deploy.yml
 name: Deploy to GitHub Pages
 
 on:
@@ -11,7 +12,7 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   deploy:
@@ -20,11 +21,13 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v2
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: "."
 
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
